[package]
name = "tg_bot"
version = "0.1.0"
authors = ["dev.hamedgk@yahoo.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.3"
teloxide-macros = "0.3"
image = "0.23"
nude = "0.3.0"
rand = "0.8.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"

tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }
